# LightYears

./: CMakeLists.txt
LightYears/: CMakeLists.txt
LightYears/include/framework/: Application.h
LightYears/src/: main.cpp
LightYears/src/framework/: Application.cpp
LightYearsEngine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LightYears.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
LightYearsEngine/LightYears/: INSTALL.vcxproj  INSTALL.vcxproj.filters  LightYearsGame.vcxproj  LightYearsGame.vcxproj.filters  cmake_install.cmake
LightYearsEngine/LightYears/LightYearsGame.dir/Debug/LightYearsGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
LightYearsEngine/include/: EntryPoint.h
LightYearsEngine/include/framework/: Actor.h  Application.h  Core.h  Object.h  World.h
LightYearsEngine/src/: EntryPoint.cpp
LightYearsEngine/src/framework/: Actor.cpp  Application.cpp  Object.cpp  World.cpp
LightYearsEngine/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
LightYearsEngine/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
LightYearsGame/: CMakeLists.txt
LightYearsGame/include/gameFramework/: GameApplication.h
LightYearsGame/src/gameFramework/: GameApplication.cpp
